# Telegram_MCP_Bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/tunnel/: Dockerfile  entrypoint.sh
src/telegram_mcp_bridge/: __init__.py  client.py  config.py  login.py  models.py  server.py  web.py
tests/: test_client.py  test_config.py
